add logo and link preview

--- a/README
+++ b/README
@@ -25,4 +25,4 @@ This project focuses on the **Advanced of JavaScript OOP And Methods**, especial
 
 ## 🧪 Try It Yourself
 
-[View](https://bankistmouad.netlify.app/)
+[View](https://mapty-mouad.netlify.app/)
